<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.example.sharita.practica4.Hoteles">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">



        <TextView
            android:text="@string/hoteles"
            style="@style/TextViewU" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewD"
            android:text="@string/utuane"/>




            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:src="@drawable/utuane"/>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewT"
                android:text="@string/utuanedes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextViewT"
                android:text="@string/utuanedes2"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextViewD"
            android:text="@string/ticuna"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:src="@drawable/tikuna"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewT"
                android:text="@string/ticunades"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextViewT"
                android:text="@string/ticunades2"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextViewD"
            android:text="@string/kurupira"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:src="@drawable/kurupira"/>
            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:src="@drawable/atardece"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewT"
                android:text="@string/kurupirades"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextViewT"
                android:text="@string/kurupirades2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>






    </LinearLayout>


</ScrollView>


