<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.example.sharita.practica4.Sitios_turisticos">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">



        <TextView
            android:text="@string/sitios_turisticos"
            style="@style/TextViewU" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextViewD"
            android:text="@string/amacayacu"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:src="@drawable/amacayu"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="160dp"
                    android:src="@drawable/guacamaya"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewT"
                    android:text="@string/desAmacayacu"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/TextViewT"
                    android:text="@string/desAmacayu2"/>
            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextViewD"
            android:text="@string/cahuinari"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:src="@drawable/cahuanari"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   "/>
            <ImageView
                android:layout_width="140dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:src="@drawable/polar"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewT"
                android:text="@string/cahuinarides"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextViewT"
                android:text="@string/cahuinarides2"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextViewD"
            android:text="@string/tarapoto"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:src="@drawable/delfin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "/>
            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:src="@drawable/regia"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewT"
                android:text="@string/tarapotodes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextViewT"
                android:text="@string/tarapotodes2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>






    </LinearLayout>


</ScrollView>


