<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.example.sharita.practica4.Bares">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">



        <TextView
            android:text="@string/bares"
            style="@style/TextViewU" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewD"
            android:text="@string/shots"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/coctelero"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/shots"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/TextViewT"
                    android:text="@string/shotsdes"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/TextViewT"
                    android:text="@string/shotsdes2"/>
            </LinearLayout>
        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextViewD"
            android:text="@string/abuelo"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:src="@drawable/abuelo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   "/>
            <ImageView
                android:layout_width="215dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:src="@drawable/bebidas"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewT"
                android:text="@string/abuelodes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextViewT"
                android:text="@string/abuelodes2"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextViewD"
            android:text="@string/tierras"
            android:gravity="center_horizontal"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:src="@drawable/tierras"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  "/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:src="@drawable/restaurante"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewT"
                android:text="@string/tierrasdes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextViewT"
                android:text="@string/tierrasdes2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>






    </LinearLayout>


</ScrollView>



